--- a/app/src/main/res/layout/activity_bridge.xml
+++ b/app/src/main/res/layout/activity_bridge.xml
@@ -8,10 +8,7 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
-
-        >
+        android:layout_height="match_parent">
 
 
         <LinearLayout
@@ -85,7 +82,8 @@
                 android:layout_height="match_parent"
                 app:cardCornerRadius="20dp"
                 android:background="#ECEDE8"
-                android:layout_marginBottom="10dp">
+                android:layout_marginBottom="10dp"
+                app:cardBackgroundColor="@color/white">
 
 
                 <LinearLayout
