--- a/app/src/main/res/layout/activity_fit.xml
+++ b/app/src/main/res/layout/activity_fit.xml
@@ -72,6 +72,7 @@
                             android:fontFamily="@font/montserratregular"
                             android:padding="5.0dp"
                             android:text="Days 60"
+                            android:textColor="@color/grey"
                             android:textSize="20.0dp"
                             android:textStyle="bold"
 
@@ -202,6 +203,7 @@
                             android:padding="5.0dp"
                             android:text="Days 60"
                             android:textSize="20.0dp"
+                            android:textColor="@color/grey"
                             android:textStyle="bold"
 
                             />
