--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ForgotPasswordActivity"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:background="@color/white">
 
 
     <TextView
@@ -37,7 +38,8 @@
             android:id="@+id/forgot_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/TextInputEditText"/>
+            style="@style/TextInputEditText"
+            android:textColor="@color/black"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <androidx.appcompat.widget.AppCompatButton
